# spiceglue-legacy

./: README.md  configure.ac
include/spice-gtk/: glib-compat.h
include/spice-gtk/common/: Makefile.am  Makefile.in  canvas_base.c  gdi_canvas.c  log.c  log.h  marshaller.c  ssl_verify.h
src/: Makefile.am  Makefile.mingw  glue-config.h  glue-printing.c  glue-printing.h  glue-service.c  glue-service.h  glue-spice-widget-priv.h  glue-spice-widget.c  glue-spice-widget.h  glue-spicy.c  glue-spicy.h  mono-glue-types.h
